fixed full width about page on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -77,9 +77,6 @@ img.oldie {
   margin-left: -2px;
   margin-top: -2px;
 }
-#content {
-  padding: 148px 30px 75px 30px;
-}
 #description p{
   color: #000;
   font-size: 24px;
@@ -400,17 +397,25 @@ p.press_description{
     font-weight: 600;
     margin-bottom: 25px;
 }
-#illustrations_content, #print_content{
-  margin-top: 10px;
-}
-#digital_products_content {
-  margin-top: 10px;
-}
 #pdf_icon {
   width: 22px;
   position: relative;
   top: 15px;
   right: 8px;
+}
+img.flair {
+  width: 100%;
+  margin-top: 90px;
+}
+#print_content, #illustrations_content {
+  padding: 120px 25px 0px;
+}
+
+#home_page_content, #digital_products_content, #logos_content{
+  padding: 110px 25px 0px;
+}
+#about_content{
+  padding: 10px 25px 0px;
 }
 
 
@@ -466,20 +471,26 @@ p.press_description{
     text-decoration:underline;
   }
   #content {
-    max-width: 725px;
-    padding: 84px 30px 0 0;
-    margin: 20px 0 0 150px;
+    max-width: 755px;
   }
   footer {
     text-align: right;
     padding: 50px 30px 50px 30px;
+  }
+  #content {
+    margin-left: 160px;
+  }
+  #about_content {
+    padding: 0px 25px 0px;
   }
 }
 
 
 /* Desktop Styles */
 @media all and (min-width: 1090px){
-
+  img.flair{
+    margin-top: 115px;
+  }
   div.client_list {
     float: left;
     margin-right: 50px;
@@ -499,7 +510,10 @@ p.press_description{
     display: block;
   }
   #content {
-    margin: 20px auto;
+    margin: 0px auto;
+  }
+  #about_content {
+    padding: 0px 25px 0px;
   }
 
   #header {
